--- a/package.json
+++ b/package.json
@@ -45,9 +45,13 @@
   "devDependencies": {
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.48.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.0.3"
   }
 }
